update feito com sucesso

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <li class="nav-item">Colors</li>
             <li class="nav-item">Typografys</li>
             <li class="nav-item">Spaces</li>
-            <li class="nav-item">Buttons</li>
-            <li class="nav-item active">Inputs</li>
+            <li class="nav-item active">Buttons</li>
+            <li class="nav-item ">Inputs</li>
             <li class="nav-item">Grid</li>
           </ul>
         </nav>
@@ -39,7 +39,7 @@
           <h1>Buttons</h1>
         </div>
 
-        <div class="border border-danger p-3">
+        <div class="border p-3">
           <!-- btn defaut -->
          <div class="d-flex justify-content-between">
             
@@ -65,12 +65,12 @@
             </div>
             <div>
               <h4>Button default outline : hover, focus</h4>
-              <button class="btn btn-outline-primary btn-outline">default</button>
+              <button class="btn btn-outline-primary ">default</button>
             </div>
           </div>
         </div>
 
-        <div class="border border-danger p-3">
+        <div class="border p-3">
           <div class="d-flex justify-content-between">
             <div>
               <h4>Button text</h4>
